--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,14 @@
 /*INICIO HEADER*/
 header {
-  margin: 0px;
-  background-color: #aec2b6;
   background: linear-gradient(to left, #aec2b6, #66706a);
   height: 150px;
 }
 nav div a img {
-  margin-left: 70px;
-  margin-top: 6px;
   height: 140px;
   width: 140px;
+}
+nav.bg-toggler {
+  background: linear-gradient(to left, #aec2b6, #66706a);
 }
 nav {
   display: flex;
@@ -20,7 +19,6 @@ nav ul {
   display: flex;
   justify-content: center;
   list-style: none;
-  margin: 0px 40px 0px 0px;
 }
 nav ul li {
   padding: 15px;
@@ -30,7 +28,7 @@ nav ul li a {
   text-decoration: none;
   font-size: 23px;
   font-weight: bold;
-  margin-left: 30px;
+  margin-left: 10px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 nav ul div.number li a {
@@ -39,7 +37,7 @@ nav ul div.number li a {
   border-radius: 20px;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
-/* PSEUDOELEMENTOS header*/
+/* pseudoelementos header*/
 nav div a img:hover {
   transform: scale(1.05);
 }
@@ -56,9 +54,16 @@ nav ul li:hover {
 body {
   margin: 0px 0px 0px 0px;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #273036;
 }
-
-div div img {
+div.container {
+  max-width: 100%;
+  padding: 0px;
+}
+div.container div img.foto-principal {
+  margin: 0px;
+}
+div div img.foto-principal {
   display: flex;
   align-items: center;
   width: 100%;
@@ -92,7 +97,6 @@ div.bottom-1 {
 div.bottom-1 a {
   text-decoration: none;
   color: rgb(255, 255, 255);
-
   font-size: 30px;
   border: 2px solid rgb(255, 255, 255);
   padding: 30px 60px;
@@ -123,37 +127,49 @@ div.bottom-1 a:hover:before {
 /*FIN BODY INDEX*/
 
 /* INICIO BODY QUIEN SOY*/
-
+div.container-1 div {
+  width: 400px;
+  margin: 0px;
+}
 div.container-1 {
-  background-color: #273036;
+  padding: 2rem 2rem;
   display: flex;
-  justify-content: space-between;
-  height: 540px;
+  align-items: center;
+  justify-content: center;
+  background-color: #273036;
 }
-div.container-1 img {
-  padding: 5rem;
+div.container-1 img.foto {
+  max-width: 80%;
 }
-div.container-1 h2 {
-  margin: 60px;
-  font-size: 3rem;
+div.container-text {
+  margin-left: 50px;
   color: white;
 }
-div.container-1 h2 p {
+button.button-2 {
+  margin-top: 25px;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: rgb(97, 91, 91);
+}
+button.button-2 a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
-  font-size: 1.5rem;
-  font-weight: lighter;
-  padding-top: 40px;
+  text-decoration: none;
+  font-size: 25px;
+  padding: 30px 40px;
 }
 /*FIN BODY QUIEN SOY*/
 /*INICIO BODY QUE ES EL COACHING*/
 section.text-2 {
-  margin: 0px;
   padding-top: 20px;
   padding-left: 3rem;
   padding-right: 2rem;
+  color: white;
 }
 section.text-2 h1 {
   font-size: 3rem;
+  font-family: sans-serif;
   display: flex;
   justify-content: center;
 }
@@ -165,39 +181,118 @@ section.targets-1 {
   margin-top: 3rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 1rem;
+  grid-gap: 1.5rem;
 }
 section.targets-1 article {
+  background-color: rgb(83, 81, 81);
   display: flex;
   flex-direction: column;
+  align-items: center;
   border: 1px solid black;
   border-radius: 1rem;
   padding: 2rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
+div.text-list {
+  color: white;
+}
+.button-info a {
+  text-decoration: none;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  color: white;
+}
+.button-info {
+  width: 250px;
+  display: flex;
+  justify-content: center;
+  background-color: #273641;
+  border-radius: 5px;
+  border: 3px;
+}
+
 /*FIN BODY QUE ES EL COACHING*/
+/*INICIO CONTACTO*/
+section.form-img {
+  display: flex;
+  align-items: center;
+}
+div.formulario {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+  width: 250px;
+  background-color: #465042;
+  padding: 30px;
+}
+form p.text-form {
+  color: white;
+  padding: 10px;
+  margin: 0px;
+}
+button.send {
+  margin: 30px 0px 20px 70px;
+  display: flex;
+  justify-content: center;
+  background-color: #273641;
+  border-radius: 5px;
+  border: 3px;
+}
+button.send:hover {
+  background-color: #66706a;
+  transition: 1s;
+}
+button.send a {
+  text-decoration: none;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  color: white;
+}
+/*FIN CONTACTO*/
 /*INICIO FOOTER*/
 footer {
-  font-family: Arial, Helvetica, sans-serif;
-  color: white;
-  background-color: #202221;
-  height: 150px;
+  background-color: #262927;
+  height: 320px;
   padding: 20px;
-  font-size: 20px;
-  font-weight: 500;
+  border-top: 1px solid rgb(14, 13, 13);
 }
 footer section.footer img {
-  height: 35px;
-  width: 35px;
-  margin-left: 0%;
+  background-color: rgb(150, 187, 150);
+  padding: 5px;
+  border-radius: 10px;
+  height: 40px;
+  width: 40px;
+  margin-top: 10px;
 }
-footer img {
-  height: 27px;
-  width: 33px;
-  margin-right: 1%;
-  margin-top: 20px;
+footer section.footer ul {
+  font-weight: bolder;
+  font-size: 25px;
+  color: white;
 }
 
 /*COSAS UTILES
 background-color: #aaaaaa;
 background: linear-gradient(to right, #aaaaaa, #5c5555);
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
+      <path
+        fill="#273036"
+        fill-opacity="1"
+        d="M0,160L34.3,160C68.6,160,137,160,206,165.3C274.3,171,343,181,411,165.3C480,149,549,107,617,112C685.7,117,754,171,823,165.3C891.4,160,960,96,1029,96C1097.1,96,1166,160,1234,186.7C1302.9,213,1371,203,1406,197.3L1440,192L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
+      ></path>
+    </svg>
 */
+/*
+
+div.container-1 h2 {
+  font-size: 3rem;
+  color: white;
+  margin: 60px;
+}
+div.container-1 h2 p {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  margin-right: 5rem;
+}*/
