--- a/styles/style.css
+++ b/styles/style.css
@@ -56,21 +56,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #273036;
 }
-div.container {
-  max-width: 100%;
-  padding: 0px;
-}
-div.container div img.foto-principal {
-  margin: 0px;
-}
-div div img.foto-principal {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  position: relative;
-  overflow: hidden;
-}
-div h1 {
+.container h1 {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -81,6 +67,7 @@ div h1 {
   font-size: calc(1rem + 3vw);
   font-weight: 700;
   text-transform: uppercase !important;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 div.bottom-1 {
   position: absolute;
@@ -123,6 +110,10 @@ div.bottom-1 a:before {
 div.bottom-1 a:hover:before {
   transform: scale(1);
   opacity: 1;
+}
+@media only screen and (max-width: 992px) {
+  div.bottom-1 {
+  }
 }
 /*FIN BODY INDEX*/
 
@@ -168,6 +159,7 @@ section.text-2 {
   color: white;
 }
 section.text-2 h1 {
+  text-align: center;
   font-size: 3rem;
   font-family: sans-serif;
   display: flex;
@@ -211,12 +203,15 @@ div.text-list {
   border-radius: 5px;
   border: 3px;
 }
-
 /*FIN BODY QUE ES EL COACHING*/
 /*INICIO CONTACTO*/
 section.form-img {
   display: flex;
   align-items: center;
+}
+div.image-pluma img {
+  max-width: 60%;
+  padding: 0px;
 }
 div.formulario {
   display: flex;
@@ -251,12 +246,25 @@ button.send a {
   color: white;
 }
 /*FIN CONTACTO*/
+/*INICIO CERTIFICADOS*/
+h5 {
+  display: flex;
+  justify-content: center;
+  color: rgb(255, 255, 255);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 35px;
+  font-weight: 700;
+}
+span.carousel-control-next-icon {
+  color: black;
+}
+/*FIN CERTIFICADOS*/
 /*INICIO FOOTER*/
 footer {
   background-color: #262927;
   height: 320px;
   padding: 20px;
-  border-top: 1px solid rgb(14, 13, 13);
+  border-top: 0.5px solid rgb(14, 13, 13);
 }
 footer section.footer img {
   background-color: rgb(150, 187, 150);
@@ -265,6 +273,13 @@ footer section.footer img {
   height: 40px;
   width: 40px;
   margin-top: 10px;
+}
+footer section.footer img:hover {
+  background-color: #66706a;
+  transition: 0.3s;
+}
+footer section.footer ul a {
+  text-decoration: none;
 }
 footer section.footer ul {
   font-weight: bolder;
