--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -3,43 +3,62 @@ section.form-img {
   display: flex;
   align-items: center;
   div.image-pluma img {
-    max-width: 60%;
+    max-width: 70%;
     padding: 0px;
   }
-  div.formulario {
-    display: flex;
-    justify-content: center;
-    margin: 30px;
-    width: 250px;
-    background-color: #465042;
-    padding: 30px;
-    form {
-      p.text-form {
-        color: white;
-        padding: 10px;
-        margin: 0px;
-      }
-      button.send {
-        margin: 30px 0px 20px 70px;
+
+  div.container-form {
+    h6 {
+      color: white;
+      margin: 2rem;
+      text-align: center;
+      font-size: 25px;
+      font-weight: 700;
+    }
+    .posicionamiento {
+      display: flex;
+      justify-content: center;
+      div.formulario {
         display: flex;
         justify-content: center;
-        background-color: #273641;
-        border-radius: 5px;
-        border: 3px;
-        a {
-          text-decoration: none;
-          font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-            sans-serif;
-          font-weight: bold;
-          font-size: 20px;
-          color: white;
-        }
-        &:hover {
-          background-color: #66706a;
-          transition: 1s;
+        margin: 30px;
+        width: 250px;
+        background-color: #465042;
+        padding: 30px;
+        form {
+          p.text-form {
+            color: white;
+            padding: 10px;
+            margin: 0px;
+          }
+          button.send {
+            margin: 30px 0px 20px 70px;
+            display: flex;
+            justify-content: center;
+            background-color: #273641;
+            border-radius: 5px;
+            border: 3px;
+            a {
+              text-decoration: none;
+              font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+                sans-serif;
+              font-weight: bold;
+              font-size: 20px;
+              color: white;
+            }
+            &:hover {
+              background-color: #66706a;
+              transition: 1s;
+            }
+          }
         }
       }
     }
+  }
+}
+@media screen and (max-width: 992px) {
+  div.image-pluma img {
+    display: none;
   }
 }
 /*FIN CONTACTO*/
