--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -4,56 +4,75 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #273036;
 }
-.container h1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  margin-left: 35px;
-  text-align: center;
-  font-size: calc(1rem + 3vw);
-  font-weight: 700;
-  text-transform: uppercase !important;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-div.bottom-1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin-top: 14rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 25px;
-  a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    font-size: 30px;
-    border: 2px solid rgb(255, 255, 255);
-    padding: 30px 60px;
-    position: relative;
-    overflow: hidden;
-    &:before {
-      content: "Saber mas";
+main {
+  position: relative;
+  border-bottom: 0.5px solid rgb(14, 13, 13);
+  .container {
+    h1 {
       position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background-color: black;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      transform: scale(5);
-      opacity: 0;
+      text-align: center;
+      font-size: calc(1rem + 3vw);
+      font-weight: 700;
+      text-transform: uppercase !important;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
-    &:hover:before {
-      transform: scale(1);
-      opacity: 1;
+    div.bottom-1 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      margin-top: 14rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      a {
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+        font-size: 30px;
+        border: 2px solid rgb(255, 255, 255);
+        background-color: rgba(0, 0, 0, 0.356);
+        padding: 25px 50px;
+        position: relative;
+        overflow: hidden;
+        &:before {
+          content: "Saber mas";
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          background-color: rgba(0, 0, 0, 0.925);
+          color: white;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          transform: scale(5);
+          opacity: 0;
+        }
+        &:hover:before {
+          transform: scale(1);
+          opacity: 1;
+        }
+      }
     }
   }
 }
-/*FIN BODY INDEX*/
+section.button-1 {
+  display: none;
+  height: 200px;
+}
+@media only screen and (max-width: 768px) {
+  section.button-1 {
+    display: block;
+  }
+}
+@media screen and (max-width: 768px) {
+  div.bottom-1 {
+    margin-top: 2rem;
+  }
+}
+/*FIN BODY INDEX */
