--- a/scss/_queeselcoaching.scss
+++ b/scss/_queeselcoaching.scss
@@ -6,8 +6,7 @@ section.text-2 {
   color: white;
   h1 {
     text-align: center;
-    font-size: 3rem;
-    font-family: sans-serif;
+    font-size: calc(0.5rem + 3vw);
     display: flex;
     justify-content: center;
   }
